--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,9 @@ body {
   line-height: 1.4;
   font-size: 4rem;
 }
+img{
+  width: 100%
+}
 @media only screen and (max-width: 56.25em) {
   .heading-primary {
     font-size: 3.2rem;
