--- a/css/style.css
+++ b/css/style.css
@@ -108,10 +108,7 @@ body {
   line-height: 1.4;
   font-size: 4rem;
 }
-img{
- max-width: 100%;
-  width: 800px;
-}
+
 @media only screen and (max-width: 56.25em) {
   .heading-primary {
     font-size: 3.2rem;
@@ -898,8 +895,15 @@ img{
     flex-wrap: wrap;
     gap: 4rem;
   }
-  @media only screen and (max-width: 560px){
-  img {
-    width: 100%;
+  *{
+    margin: 0;
+    padding: 0;
   }
+  #imgages {
+    margin-top: 30px;
+  }
+#images img {
+  display: block;
+  width: 100%;
+  margin-top: 9px;
 }
